plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'org.udesa'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17' // Asegúrate que esto coincida con tu versión de Java instalada
}

repositories {
    mavenCentral()
}

dependencies {
    // ESTO SOLUCIONA TUS IMPORTS DE SPRING (@Bean, @Configuration)
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    // Base de datos en memoria
    runtimeOnly 'com.h2database:h2'
    // ESTO SOLUCIONA TUS IMPORTS DE SWAGGER/OPENAPI (@Tag, @ApiResponses)
    // Usamos springdoc-openapi que es la librería estándar moderna para Spring Boot 3
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // Utilidades generales (Lombok es muy común, quítalo si no lo usas)
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

}

tasks.named('test') {
    useJUnitPlatform()
}